<resources>
    <string name="app_name">imdb sandbox</string>
    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login_text">Login</string>
    <string name="UserNameTextView">User Name</string>
    <string name="Password" />
    <string name="PasswordText">Password</string>
    <string name="UsernameTextField">Enter user name</string>
    <string name="PasswordTextFiels">enter password</string>
    <string name="Login_button">Login</string>
    <string name="signupText">Sign up?</string>
    <string name="Register_text">Register</string>
    <string name="firstName">First Name</string>
    <string name="FirstNameTextField">Enter first name</string>
    <string name="LastNameText">Last Name</string>
    <string name="LastNameTextField">enter last name</string>
    <string name="Register_button">Register</string>
</resources>